# autoflow_SRXN

./: .gitignore  DOCUMENTATION.md  README.md  ads_workflow_mgr.py  config_full.yaml  create_si_reconstructed.py  create_si_slab.py  fixed_z_ex_script.txt  implementation_plan.md  potential_factory.py  process_dipas.py  pyproject.toml  requirements.txt  setup.py  surface_utils.py  theory.md  zbl_ex_script_part.txt  zbl_example.py
autoflow_srxn/: ads_workflow_mgr.py  chem_data.json  chemisorption_builder.py  knowledge_engine.py  logger_utils.py  potentials.py  qpoint_handler.py  surface_utils.py  thermo_engine.py  vibrational_analyzer.py  zbl_pairs.json
example_dipas/: POSCAR_reconstructed  ads_workflow_mgr.py  check_buckling.py  chemisorption_builder.py  config.yaml  config_bulk.yaml  config_full.yaml  config_pass.yaml  config_protector.yaml  create_si_reconstructed.py  legacy_reconstruct.py  passivated_surface.vasp  run.py  run_dipas_study.py  si100_reconstructed_passivated.extxyz  si_surface_utils.py  surface_utils.py  test_passivation.py  verify_unique_fragments.py
example_general/: run.py
free_energy/: analyze_thermo.py  test_phonopy.yaml  thermo_engine.py
src/: ads_workflow_mgr.py  chemisorption_builder.py  potentials.py  qpoint_handler.py  si_surface_utils.py  surface_utils.py  thermo_engine.py  vibrational_analyzer.py
structures/: SiO2_substrate.vasp  Si_bulk.vasp  ferrocene.vasp  mol.vasp
unittests/: test_adsorption.py  test_phva_validation_si110.py  test_potentials.py  test_surface.py  test_vib_thermo.py  test_vibration_viz.py  visualize_metrics.py
(+28 files in other folders)
