[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoflow-srxn"
version = "0.1.0"
description = "Automated Surface Reaction (SRXN) Modeling Framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ase",
    "numpy",
    "scipy",
    "pyyaml",
    "spglib",
    "rdkit"
]

[project.optional-dependencies]
mlip = [
    "torch",
    "mace-torch",
    "sevenn"
]

[tool.setuptools]
packages = ["autoflow_srxn"]

[tool.setuptools.package-data]
autoflow_srxn = ["*.json"]
